clusters/dextek/apps/network/envoy-gateway/gateway/external/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-external
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname ingress.plexuz.xyz
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      coredns.io/hostname: gateway-external
      external-dns.alpha.kubernetes.io/hostname: *hostname
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: external-proxy-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: &host "*.plexuz.xyz"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: *host
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: default-cert
